add setup password page and endpoints
